[tool.poetry]
name = "aoc-2023"
version = "0.1.0"
description = "Advent of Code 2023"
authors = ["Clayton Yochum <claytonjy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
mypy = "^1.7.1"
pytest = "^7.4.3"
pre-commit = "^3.5.0"
ipython = "^8.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
